diesel_compile_tests/tests/fail/boxed_queries_and_group_by.stderr
error[E0277]: the trait bound `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, LimitOffsetClause<NoLimitClause, NoOffsetClause>, diesel::query_builder::group_by_clause::GroupByClause<users::columns::name>>: BoxedDsl<'_, _>` is not satisfied
  --> tests/fail/boxed_queries_and_group_by.rs:55:40
   |
55 |     users::table.group_by(users::name).into_boxed();
   |                                        ^^^^^^^^^^ the trait `BoxedDsl<'_, _>` is not implemented for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, LimitOffsetClause<NoLimitClause, NoOffsetClause>, diesel::query_builder::group_by_clause::GroupByClause<users::columns::name>>`
   |
   = help: the following other types implement trait `BoxedDsl<'a, DB>`:
             SelectStatement<FromClause<F>, S, D, W, O, LOf, G, H>
             SelectStatement<NoFromClause, S, D, W, O, LOf, G, H>

error[E0271]: type mismatch resolving `<name as IsContainedInGroupBy<id>>::Output == Yes`
  --> tests/fail/boxed_queries_and_group_by.rs:59:10
   |
59 |         .select(users::id)
   |          ^^^^^^ type mismatch resolving `<name as IsContainedInGroupBy<id>>::Output == Yes`
   |
note: expected this to be `diesel::expression::is_contained_in_group_by::No`
  --> tests/fail/boxed_queries_and_group_by.rs:8:9
   |
8  |         name -> Text,
   |         ^^^^
note: required for `users::columns::id` to implement `ValidGrouping<users::columns::name>`
  --> tests/fail/boxed_queries_and_group_by.rs:7:9
   |
7  |         id -> Integer,
   |         ^^
   = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<FromClause<table>>, ..., ..., ..., ..., ...>` to implement `SelectDsl<users::columns::id>`

error[E0277]: the trait bound `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<users::columns::id>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, LimitOffsetClause<NoLimitClause, NoOffsetClause>, diesel::query_builder::group_by_clause::GroupByClause<users::columns::name>>: BoxedDsl<'_, _>` is not satisfied
  --> tests/fail/boxed_queries_and_group_by.rs:60:10
   |
60 |         .into_boxed();
   |          ^^^^^^^^^^ the trait `BoxedDsl<'_, _>` is not implemented for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<users::columns::id>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, LimitOffsetClause<NoLimitClause, NoOffsetClause>, diesel::query_builder::group_by_clause::GroupByClause<users::columns::name>>`
   |
   = help: the following other types implement trait `BoxedDsl<'a, DB>`:
             SelectStatement<FromClause<F>, S, D, W, O, LOf, G, H>
             SelectStatement<NoFromClause, S, D, W, O, LOf, G, H>

error[E0271]: type mismatch resolving `<name as IsContainedInGroupBy<id>>::Output == Yes`
  --> tests/fail/boxed_queries_and_group_by.rs:66:10
   |
66 |         .select(users::id)
   |          ^^^^^^ type mismatch resolving `<name as IsContainedInGroupBy<id>>::Output == Yes`
   |
note: expected this to be `diesel::expression::is_contained_in_group_by::No`
  --> tests/fail/boxed_queries_and_group_by.rs:8:9
   |
8  |         name -> Text,
   |         ^^^^
note: required for `users::columns::id` to implement `ValidGrouping<users::columns::name>`
  --> tests/fail/boxed_queries_and_group_by.rs:7:9
   |
7  |         id -> Integer,
   |         ^^
   = note: required for `BoxedSelectStatement<'_, diesel::sql_types::Text, FromClause<users::table>, _, users::columns::name>` to implement `SelectDsl<users::columns::id>`

error[E0277]: the trait bound `BoxedSelectStatement<'_, diesel::sql_types::Text, FromClause<users::table>, _, users::columns::name>: Table` is not satisfied
  --> tests/fail/boxed_queries_and_group_by.rs:73:10
   |
73 |         .inner_join(posts::table)
   |          ^^^^^^^^^^ the trait `Table` is not implemented for `BoxedSelectStatement<'_, diesel::sql_types::Text, FromClause<users::table>, _, users::columns::name>`
   |
   = help: the following other types implement trait `Table`:
             posts::table
             users::table
             Only<S>
             Tablesample<S, TSM>
             pg::metadata_lookup::pg_namespace::table
             pg::metadata_lookup::pg_type::table
   = note: required for `BoxedSelectStatement<'_, diesel::sql_types::Text, FromClause<users::table>, _, users::columns::name>` to implement `JoinTo<query_source::joins::OnClauseWrapper<_, _>>`
   = note: required for `BoxedSelectStatement<'_, diesel::sql_types::Text, FromClause<users::table>, _, users::columns::name>` to implement `JoinWithImplicitOnClause<query_source::joins::OnClauseWrapper<_, _>, Inner>`

error[E0308]: mismatched types
  --> tests/fail/boxed_queries_and_group_by.rs:73:21
   |
73 |         .inner_join(posts::table)
   |          ---------- ^^^^^^^^^^^^ expected `OnClauseWrapper<_, _>`, found `table`
   |          |
   |          arguments to this method are incorrect
   |
   = note: expected struct `query_source::joins::OnClauseWrapper<_, _>`
              found struct `posts::table`
help: the return type of this call is `posts::table` due to the type of the argument passed
   --> tests/fail/boxed_queries_and_group_by.rs:69:5
    |
69  | /     users::table
70  | |         .group_by(users::name)
71  | |         .select(users::name)
72  | |         .into_boxed()
73  | |         .inner_join(posts::table)
    | |_____________________------------^
    |                       |
    |                       this argument influences the return type of `inner_join`
note: method defined here
   --> $DIESEL/src/query_dsl/mod.rs
    |
    |     fn inner_join<Rhs>(self, rhs: Rhs) -> InnerJoin<Self, Rhs>
    |        ^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/fail/boxed_queries_and_group_by.rs:79:9
   |
76 |     let mut a = users::table.into_boxed();
   |                 ------------------------- expected due to this value
...
79 |     a = users::table.group_by(users::id).into_boxed();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `BoxedSelectStatement<'_, (..., ...), ..., ...>`, found `BoxedSelectStatement<'_, (..., ...), ..., ..., ...>`
   |
   = note: expected struct `BoxedSelectStatement<'_, _, _, _, ()>`
              found struct `BoxedSelectStatement<'_, _, _, _, users::columns::id>`

error[E0271]: type mismatch resolving `<BoxedSelectStatement<'_, (Integer, Text), FromClause<table>, _> as AsQuery>::Query == SelectStatement<FromClause<BoxedSelectStatement<'_, (Integer, Text), FromClause<table>, _>>>`
  --> tests/fail/boxed_queries_and_group_by.rs:84:10
   |
84 |         .group_by(users::id)
   |          ^^^^^^^^ expected `BoxedSelectStatement<'_, (..., ...), ..., ...>`, found `SelectStatement<FromClause<...>>`
   |
   = note: expected struct `BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), FromClause<users::table>, _>`
              found struct `SelectStatement<FromClause<BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), FromClause<users::table>, _>>>`
   = note: required for `BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), FromClause<users::table>, _>` to implement `GroupByDsl<_>`

error[E0277]: the trait bound `BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), FromClause<users::table>, _>: Table` is not satisfied
  --> tests/fail/boxed_queries_and_group_by.rs:84:10
   |
84 |         .group_by(users::id)
   |          ^^^^^^^^ the trait `Table` is not implemented for `BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), FromClause<users::table>, _>`
   |
   = help: the following other types implement trait `Table`:
             posts::table
             users::table
             Only<S>
             Tablesample<S, TSM>
             pg::metadata_lookup::pg_namespace::table
             pg::metadata_lookup::pg_type::table
   = note: required for `BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), FromClause<users::table>, _>` to implement `GroupByDsl<_>`

error[E0277]: the trait bound `SelectStatement<FromClause<BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), FromClause<users::table>, _>>>: GroupByDsl<_>` is not satisfied
  --> tests/fail/boxed_queries_and_group_by.rs:84:10
   |
84 |         .group_by(users::id)
   |          ^^^^^^^^ the trait `GroupByDsl<_>` is not implemented for `SelectStatement<FromClause<BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), FromClause<users::table>, _>>>`
   |
   = help: the trait `GroupByDsl<Expr>` is implemented for `SelectStatement<F, S, D, W, O, LOf, G, H>`
